--- a/app/build.gradle
+++ b/app/build.gradle
@@ -74,10 +74,8 @@ dependencies {
     implementation "com.google.dagger:dagger:2.31"
     kapt "com.google.dagger:dagger-compiler:2.28"
 
-    // Dagger Android
-//    api 'com.google.dagger:dagger-android:2.24'
-//    api 'com.google.dagger:dagger-android-support:2.24'
-//    kapt 'com.google.dagger:dagger-android-processor:2.24'
+    // For BottomNavigationView from Material Components
+    implementation 'com.google.android.material:material:1.0.0'
 
     // Activity KTX for viewModels()
     implementation "androidx.activity:activity-ktx:1.2.1"
