--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,8 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_main"
         android:supportsRtl="true"
-        android:theme="@style/Theme.BaseStartApplication">
+        android:theme="@style/Theme.BaseStartApplication"
+        android:usesCleartextTraffic="true">
         <activity android:name=".BrowseActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -20,7 +21,7 @@
             </intent-filter>
         </activity>
 
-        <activity android:name=".player.view.YouTubePlayerActivity"/>
+        <activity android:name=".player.view.YouTubePlayerActivity" />
 
         <receiver android:name=".receiver.AlarmNotificationReceiver" />
     </application>
